# MASS

./: README.md  pyproject.toml  setup.py
src/MASS.egg-info/: SOURCES.txt  entry_points.txt
src/tools/: cli.py  core.py  spice.py
src/tools/MASS.egg-info/: PKG-INFO  SOURCES.txt
src/tools/data/: read_sites.sh
tests/: test.py
